--- a/server.properties
+++ b/server.properties
@@ -1,53 +1,55 @@
 #Minecraft server properties
-#Sun May 30 00:01:22 IST 2021
-spawn-protection=0
-max-tick-time=60000
-query.port=25565
-generator-settings=
-sync-chunk-writes=true
-force-gamemode=false
-allow-nether=true
-enforce-whitelist=false
-gamemode=survival
-broadcast-console-to-ops=true
-enable-query=false
-player-idle-timeout=0
-text-filtering-config=
-difficulty=hard
-spawn-monsters=true
-broadcast-rcon-to-ops=true
-op-permission-level=4
-\u00EF\u00BB\u00BF\#Minecraft=server properties
-pvp=true
-entity-broadcast-range-percentage=100
-snooper-enabled=true
-level-type=default
-hardcore=false
-enable-status=true
+#Mon Oct 11 12:17:37 IST 2021
+enable-jmx-monitoring=false
+rcon.port=25575
+level-seed=
 enable-command-block=false
-max-players=20
+gamemode=survival
+enable-query=false
+generator-settings=
+level-name=world
+motd=TheBois Server
+query.port=25565
+pvp=true
+generate-structures=true
+difficulty=hard
 network-compression-threshold=256
+max-tick-time=60000
+require-resource-pack=false
+use-native-transport=true
+max-players=20
+enable-status=true
+online-mode=false
+allow-flight=false
+\u00EF\u00BB\u00BF\#Minecraft=server properties
+broadcast-rcon-to-ops=true
+view-distance=10
+max-build-height=256
+server-ip=
+resource-pack-prompt=
+allow-nether=true
+server-port=25565
+sync-chunk-writes=true
+enable-rcon=false
+op-permission-level=4
+prevent-proxy-connections=false
+resource-pack=
+entity-broadcast-range-percentage=100
+player-idle-timeout=0
+rcon.password=
+force-gamemode=false
+rate-limit=0
+hardcore=false
+white-list=false
+broadcast-console-to-ops=true
+spawn-npcs=true
+spawn-animals=true
+snooper-enabled=true
+function-permission-level=2
+level-type=default
+text-filtering-config=
+spawn-monsters=true
+enforce-whitelist=false
+spawn-protection=0
 resource-pack-sha1=
 max-world-size=29999984
-function-permission-level=2
-rcon.port=25575
-server-port=25565
-server-ip=
-spawn-npcs=true
-allow-flight=false
-level-name=world
-view-distance=10
-resource-pack=
-spawn-animals=true
-white-list=false
-rcon.password=
-generate-structures=true
-online-mode=false
-max-build-height=256
-level-seed=
-prevent-proxy-connections=false
-use-native-transport=true
-enable-jmx-monitoring=false
-motd=TheBois Server
-rate-limit=0
-enable-rcon=false
