--- a/server.properties
+++ b/server.properties
@@ -1,17 +1,19 @@
 #Minecraft server properties
-#Wed Dec 22 23:57:02 IST 2021
+#Sun Oct 16 13:47:31 IST 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
 enable-command-block=false
 gamemode=survival
 enable-query=false
-generator-settings=
+generator-settings={}
+enforce-secure-profile=true
 level-name=world
 motd=TheBois Server
 query.port=25565
 pvp=true
 generate-structures=true
+max-chained-neighbor-updates=1000000
 difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
@@ -45,6 +47,7 @@ hardcore=false
 white-list=false
 broadcast-console-to-ops=true
 spawn-npcs=true
+previews-chat=false
 spawn-animals=true
 snooper-enabled=true
 function-permission-level=2
